--- a/Chessman_Image_Classification.ipynb
+++ b/Chessman_Image_Classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8TEeFyZRYkq59IZImDg5y",
+      "authorship_tag": "ABX9TyNoJ0xIzJyS7cuJgMJcs9/M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -583,7 +583,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 376
+          "height": 330
         },
         "id": "wH1Z4lvK3bxW",
         "outputId": "a5c34865-759c-45c3-e269-fe27e44ef895"
@@ -815,10 +815,10 @@
       ],
       "metadata": {
         "id": "tmuu8O3BSB75",
-        "outputId": "20e1e3cc-f24b-4a59-c67a-dfa147566ca5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "20e1e3cc-f24b-4a59-c67a-dfa147566ca5"
       },
       "execution_count": 375,
       "outputs": [
@@ -909,19 +909,20 @@
       "cell_type": "code",
       "source": [
         "import gradio as gr\n",
+        "description = \"Select any Chessman image and the model will try to predict the class\"\n",
         "in_img = gr.inputs.Image()\n",
         "out_label = gr.outputs.Label(num_top_classes=len(classes))\n",
-        "gr.Interface(fn=predict_image, inputs=in_img, outputs=out_label).launch(share=True)"
+        "gr.Interface(fn=predict_image, inputs=in_img, outputs=out_label, description=description).launch(share=True)"
       ],
       "metadata": {
-        "id": "b_CS6IoFf2Me",
-        "outputId": "6b66958d-0b28-4c31-a555-fe29c38aa69a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 749
-        }
+        },
+        "id": "b_CS6IoFf2Me",
+        "outputId": "c7b1fc7f-b754-498c-8b2d-ff55c12a1ee5"
       },
-      "execution_count": 377,
+      "execution_count": 380,
       "outputs": [
         {
           "output_type": "stream",
@@ -942,7 +943,7 @@
           "name": "stdout",
           "text": [
             "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
-            "Running on public URL: https://8de0f473-4d2b-4a47.gradio.live\n",
+            "Running on public URL: https://1e5c4558-d83a-4d05.gradio.live\n",
             "\n",
             "This share link expires in 72 hours. For free permanent hosting and GPU upgrades (NEW!), check out Spaces: https://huggingface.co/spaces\n"
           ]
@@ -954,7 +955,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<div><iframe src=\"https://8de0f473-4d2b-4a47.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+              "<div><iframe src=\"https://1e5c4558-d83a-4d05.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
             ]
           },
           "metadata": {}
@@ -965,9 +966,18 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 377
+          "execution_count": 380
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "UCGA7Mecqgri"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
